add matchmaking cases
